--- a/devhub/mkdocs.yml
+++ b/devhub/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: EUDI Wallet Dev Hub
 site_url: https://eu-digital-identity-wallet.github.io/devhub/
+remote_branch: devhub
 theme:
   name: material
   font:
